[FIX] signin link wrap

--- a/src/Containers/Welcome/style.css
+++ b/src/Containers/Welcome/style.css
@@ -5,7 +5,7 @@
 .welcomeGrid {
   padding: 30px;
   /* background: red; */
-  width: 60%;
+  width: 75%;
   position: absolute;
   top: 50%;
   left: 50%;
